samples/_failures_safe/1761415713_80d985_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9345d71.c:2:2: error: expected ‘;’ before ‘typedef’
    2 | c
      |  ^
      |  ;
./samples/SAFE/__tmp_c9345d71.c: In function ‘main’:
./samples/SAFE/__tmp_c9345d71.c:151:17: error: expected declaration or statement at end of input
  151 |                 if (status == 1) {
      |                 ^~
./samples/SAFE/__tmp_c9345d71.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9345d71.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9345d71.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9345d71.c:151:17: error: expected declaration or statement at end of input
